--- a/newborn-app/package.json
+++ b/newborn-app/package.json
@@ -17,10 +17,13 @@
     "@mui/material": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "uninstall": "0.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
