--- a/newborn-app/package.json
+++ b/newborn-app/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
+    "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
