--- a/newborn-app/package.json
+++ b/newborn-app/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
